--- a/rail_forge/Cargo.toml
+++ b/rail_forge/Cargo.toml
@@ -16,3 +16,6 @@ pyo3 = { version = "0.22.5", features = ["extension-module"] }
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3.16"
+dotenv = "0.15.0"
+prost = "0.13.3"
+prost-types = "0.13.3"
