--- a/snake_trail/pyproject.toml
+++ b/snake_trail/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.3",
+    "pydantic>=2.9.2",
     "uvicorn>=0.32.0",
 ]
